working on typography

--- a/wp-content/themes/hensderson/static/less/main.less
+++ b/wp-content/themes/hensderson/static/less/main.less
@@ -573,7 +573,7 @@ header {
     padding: 30px 0;
     background-color: var(--white);
     width: 100%;
-    max-width: 1920px;
+    // max-width: 1920px;
     // .padding-lr();
     box-sizing: border-box;
     //use these css fro fixed header
