--- a/wp-content/themes/hensderson/views/partials/footer.twig
+++ b/wp-content/themes/hensderson/views/partials/footer.twig
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="copyright center">
-        <span class="copyright-text">&copy; Company name {{"now"|date('Y')}}. </span>
+        <span class="copyright-text">&copy; {{"now"|date('Y')}} Henderson Physiotherapy | </span>
         <span class="site-by">Site by <a href="https://onpoint.ca/" target="_blank" rel="noopener noreferrer" aria-label="link to PSone website">onPoint</a></span>
         <span> | <a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noopener noreferrer" aria-label="Link to google terms">Google Terms</a></span>
     </div>
