--- a/wp-content/themes/hensderson/static/less/variables.less
+++ b/wp-content/themes/hensderson/static/less/variables.less
@@ -23,7 +23,7 @@ VARIABLES
 @max992: ~"screen and (max-width: 991px)";
 @max1024: ~"screen and (max-width: 1023px)";
 
-@images: "/wp-content/themes/azidrilling/static/images"; //change theme name accordingly.
+@images: "/wp-content/themes/henderson/static/images"; //change theme name accordingly.
 //use this for background-image
 //background-image: url("@{images}/maximize-icon.svg");
 
@@ -62,36 +62,19 @@ VARIABLES
     --space-96: calc(6 * var(--space-unit)); //96px
 
     //color-theory
-    --pri-100: #34768C;
-    --pri-200: #47A2C2;
-    --pri-300: #5CD1FB;
-    --pri-400: #68D9FB;
-    --pri-500: #81E3FC;
+    --pri-100: #12365B;
 
-    --sec-100: #CCCCCC;
-    --sec-200: #D9D9D9;
-    --sec-300: #E6E6E6;
-    --sec-400: #F2F2F2;
-    --sec-500: #FFFFFF;
+    --sec-100: #2F95FF;
 
-    --ter-100: #000000;
-    --ter-200: #333333;
-    --ter-300: #4D4D4D;
-    --ter-400: #666666;
-    --ter-500: #808080;
+    --ter-100: #727272;
 
-    --neu-100: #2E2B28;
-    --neu-200: #757677;
-    --neu-300: #A7A8AA;
-    --neu-400: #DCDCDD;
-    --neu-500: #EDEEEE;
+    --new-100: #fafafa;
 
     --white: #fff;
     --black: #000;
 
     //font
-    --font-primary: 'sofia-pro', sans-serif;
-    --font-secondary: 'gravesend-sans', sans-serif;
+    --font-primary: 'Lexend Deca', sans-serif;
 
     //line-height
     --heading-line-height: 1.1;
