--- a/wp-content/themes/hensderson/static/less/variables.less
+++ b/wp-content/themes/hensderson/static/less/variables.less
@@ -77,7 +77,7 @@ VARIABLES
     --font-primary: 'Lexend Deca', sans-serif;
 
     //line-height
-    --heading-line-height: 1.1;
+    --heading-line-height: 140%;
     --body-line-height: 140%;
 
     //content
