--- a/wp-content/themes/hensderson/static/less/typography.less
+++ b/wp-content/themes/hensderson/static/less/typography.less
@@ -15,14 +15,14 @@
 
 .h1,.h2,.h3,.h4,.h5,.h6, h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-primary);
-    color: var(--pri-500);
-    .font-size(80,48);
+    color: var(--pri-100);
+    .font-size(64,28);
     line-height: var(--heading-line-height);
     font-weight: 700;
 }
 
 .h2, h2 {
-    .font-size(60,40);
+    .font-size(56,24);
 }
 
 
@@ -31,11 +31,13 @@
 }
 
 .h4, h4 {
-    .font-size(30, 20);
+    .font-size(36, 20);
+    font-weight: 400;
 }
 
 .h5,.h6, h5, h6 {
-    .font-size(20, 16);
+    .font-size(24, 18);
+    font-weight: 600;
 }
 
 p,li,a,td,span, legend, label, .wpcf7-response-output {
@@ -43,7 +45,7 @@ p,li,a,td,span, legend, label, .wpcf7-response-output {
     color: var(--black);
     line-height: var(--body-line-height);
     font-weight: 400;
-    .font-size(20, 16);
+    .font-size(18, 16);
 }
 
 a, button, .wp-block-button__link {
@@ -60,9 +62,9 @@ a, button, .wp-block-button__link {
 //     transition: all .3s ease-in-out;
 // }
 
-.letter-spacing(@mb, @dk){
-    letter-spacing: ~"@{mb}px";
-    @media @min768{
-        letter-spacing: ~"@{dk}px";
-    }
-}
+// .letter-spacing(@mb, @dk){
+//     letter-spacing: ~"@{mb}px";
+//     @media @min768{
+//         letter-spacing: ~"@{dk}px";
+//     }
+// }
